# stock-signal-lab

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: cli.py  config.py  constants.py  main.py
configs/: stock_historical_campaign.yml
docs/: ACQUISITION_INFRASTRUCTURE.md  ANALYTICS.md  BASELINE_EXPERIMENT_REPORT.md  CHANGES_V2.md  DATA_PROVIDER_PLAN.md  DECISIONS.md  DIAGNOSTICS.md  FEATURE_REGISTRY.md  FUTURE_FEATURES.md  HISTORICAL_DATA_ACQUISITION_CAMPAIGN.md  HISTORICAL_DATA_ACQUISITION_RUNBOOK.md  HYPOTHESES.md  LOCAL_SETUP.md  OPTIONS_RESEARCH_PLAN.md  POLYGON_DATA_ACQUISITION_PLAN.md  POLYGON_ONE_FILE_ATTEMPT.md  POLYGON_STOCK_CAMPAIGN_PLAN.md  RESEARCH_PHASE.md  ROADMAP.md  V1_ARCHITECTURE_FREEZE.md  VISION.md  polygon-provider.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
migrations/: README  env.py
scripts/: bootstrap-dev.sh  generate_feature_registry.py  reset-dev.sh
tests/: conftest.py  test_acquisition_infrastructure.py  test_acquisition_routes.py  test_analysis_endpoint.py  test_app_boot.py  test_backtesting.py  test_campaign_runner.py  test_cli.py  test_compare_strategies.py  test_data_provenance.py  test_database_session.py  test_decision_evaluation.py  test_decision_horizons.py  test_decision_performance.py  test_decisions.py  test_diagnostics.py  test_experiments.py  test_exports.py  test_feature_registry.py  test_flat_file_acquisition.py  test_history_endpoints.py  test_ingestion_provider_selection.py  test_mock_ingestion.py  (+19 more)
(+94 files in other folders)
